fix text wrapp image

--- a/src/components/molecules/article/Article.module.scss
+++ b/src/components/molecules/article/Article.module.scss
@@ -2,21 +2,9 @@
   width: 470px;
   height: 252px;
 }
-
-.article-item-content {
-  display: flex;
-  flex-direction: column;
+.article-item-body{
+  padding-top: 20px;
 }
-
-.article-image {
-  max-width: 100%;
-  max-height: 100%;
-  margin: 10px;
-}
-
-.article-item-content {
-  display: inline;
-  margin: 10px;
-  overflow: hidden;
-  text-overflow: ellipsis;
+.article-image{
+    float: left;
 }
